<resources>
    <string name="app_name">TakeAByte</string>
    <string name="BotonSiguiente">Siguiente</string>
    <string name="BotonAnterior">Anterior</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicia sesión o regístrate</string>
    <string name="action_sign_in_short">Inicia sesión</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login fallido</string>
    <string name="Se_ha_seleccionado_la_imagen">Imagen subida</string>
    <string name="Se_ha_cancelado_la_seleccion_de_la_imagen">Subida de imagen cancelada</string>
    <string name="HintCalendario">Escriba una fecha o pulse de nuevo para usar el calendario</string>
    <string name="TituloSigin">Inicia sesión</string>
    <string name="HintUser">Usuario</string>
    <string name="HintPass">Contraseña</string>
    <string name="CheckRecuerda">Recuérdame</string>
    <string name="Btn_INICIASESION">LOG-IN</string>
    <string name="btn_Resena">Reseñas</string>
    <string name="btn_mirarCarta">Nuestra Carta</string>
    <string name="btn_Reserva">Hacer reserva</string>
    <string name="btn_Contact">Contáctanos!</string>
    <string name="btn_logout">LOG-OUT</string>
    <string name="Hint_Titulo_Res">Título de la reseña</string>
    <string name="Hint_desc">Descripción de la reseña</string>
    <string name="HInt_val">Valoración</string>
    <string name="btn_AgregarRes">Agregar Reseña</string>
    <string name="btn_Volver">Volver</string>
    <string name="txt_numPers">Número de personas:</string>
    <string name="txt_fecha">Fecha:</string>
    <string name="txt_hora">Hora:</string>
    <string name="btn_reservar">Reservar</string>
    <string name="titulo_consulta">Escribe tu consulta, reclamación, etc.</string>
    <string name="btn_foto">Hacer foto</string>
    <string name="btn_selecFoto">Selecionar imagen de la galería</string>
    <string name="btn_enviarFoto">Enviar foto</string>
    <string name="titulo_correo">Nuestro correo es: TakeAByte@gmail.com</string>
    <string name="hint_Escribe">Escríbenos un mensaje</string>
    <string name="btn_enviarComent">Enviar comentario</string>
    <string name="btn_Volver2">Volver</string>
    <string name="RESTAURANTE">Take A Byte</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cargando">Cargando...</string>
    <string name="haz_clic_sobre_un_producto_para_ver_sus_nutrientes">Haz clic sobre un producto para ver sus nutrientes.</string>
    <string name="volver">Volver</string>
</resources>