<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#4659C1"
    tools:context=".Contactar">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_degradado"
        tools:context=".MainActivity">

    </RelativeLayout>

    <TextView
        android:id="@+id/TituloContactar"
        android:layout_width="277dp"
        android:layout_height="140dp"
        android:backgroundTint="@color/white"
        android:fontFamily="casual"
        android:text="@string/titulo_consulta"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <ImageView
        android:id="@+id/imagenBocata"
        android:layout_width="202dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <Button
        android:id="@+id/botonImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#7584D3"
        android:text="@string/btn_foto"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581"
        app:strokeColor="#3D2071"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_correo"
        android:textColor="#FFFCFC"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/campoComentario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenBocata"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/campoComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hint_Escribe"
        android:inputType="text"
        android:textColor="#FFFAFA"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/botonComentario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenBocata"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/botonComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="#4659C1"
        android:text="@string/btn_enviarComent"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonImagen"
        app:layout_constraintVertical_bias="0.677"
        app:strokeColor="#3F51B5"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/botonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#181F49"
        android:onClick="Volver"
        android:text="@string/btn_Volver2"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <Button
        android:id="@+id/botonFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:backgroundTint="#4659C1"
        android:text="@string/btn_enviarFoto"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721"
        app:strokeColor="#3F51B5"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/seleccionarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#7584D3"
        android:text="@string/btn_selecFoto"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/botonFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonImagen"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="#3D2071"
        app:strokeWidth="3dp" />


</androidx.constraintlayout.widget.ConstraintLayout>